--- a/src/style/layout/_home.scss
+++ b/src/style/layout/_home.scss
@@ -38,6 +38,7 @@
     }
     #explore{
         margin: auto;
+        cursor: pointer;
         @include medium-screen{
             margin: .5em auto 5em auto;
         }
